@@ -1,3 +1,10 @@
+2021/07/27 Visenri
+
+    * src/pdk/gen.c
+      support/regression/tests/getbyte_param.c
+      Fix bug #3269.
+      Add test for it.
+
 2021/07/26 Visenri
 
     * support/regression/Makefile.in
